--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "themodulefactory/file-system-tree",
-    "description": "A small package that provides an object to create a file system from a given \"seed\" directory",
+    "description": "A small package that provides an object to create a file system listing of a given \"seed\" directory",
     "type": "project",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "license": "GPL-3.0-or-later",
     "authors": [
         {
@@ -12,12 +12,7 @@
     ],
     "require": {
         "php": "^7.4",
-        "ext-json": "^7.4",
-        "ext-PDO": "^7.4",
-        "vlucas/phpdotenv": "5.3.x-dev"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "10.0.x-dev"
+        "ext-json": "^7.4"
     },
     "autoload": {
         "psr-4": {
