--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "themodulefactory/file-system-tree",
     "description": "A small package that provides an object to create a file system listing of a given \"seed\" directory",
-    "type": "project",
-    "version": "1.0.1",
+    "type": "library",
+    "version": "1.0.2",
     "license": "GPL-3.0-or-later",
     "authors": [
         {
