--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "themodulefactory/file-system-tree",
-    "description": "A small package that provides an object to create a file system listing of a given \"seed\" directory",
+    "description": "A small package that provides an object to create a list of file system folders and files under a given \"seed\" directory",
     "type": "library",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "license": "GPL-3.0-or-later",
     "authors": [
         {
