--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "themodulefactory/file-system-tree",
     "description": "A small package that provides a class that defines an object which lists all sub folder nodes and the files within a given \"seed\" directory",
     "type": "library",
-    "license": "GPL-3.0-or-later",
+    "license": "MIT",
     "keywords": [
         "files list",
         "folder",
@@ -27,12 +27,9 @@
             "FileSystemTree\\": "src/"
         }
     },
-    "config": {
-        "preferred-install": "dist"
-    },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.1-dev"
+            "dev-master": "1.0.0-dev"
         }
     }
 }
